add arty and change color

--- a/css/style.css
+++ b/css/style.css
@@ -1622,7 +1622,7 @@ a.text-gradient-fuego-turquoise-hover:hover {
     04. Background color
 ====================================== */
 .bg-aute {
-    background-color: #1F1714;
+    background-color: #181D27;
 }
 
 .bg-white {
